# SudokuSolver

./: .gitignore  CMakeLists.txt  README.md
include/: aux.hpp
libs/auxiliar/: aux.cpp
model/src/: test.cpp  train.cpp
src/: main.cpp
